fixed layout of top page section spacing

--- a/themes/rise-legal/sass/_contact.scss
+++ b/themes/rise-legal/sass/_contact.scss
@@ -11,12 +11,11 @@
 }
 
 .contact-meta {
-	margin: 40px 0;
+	margin: 3rem 0;
 }
 
-
 .responsive-map {
-	margin-bottom: 40px;
+	margin-bottom: 4rem;
 	iframe {
 		width: 100%;
 		@include desktop {
